# shpdf-tools

./: .gitignore  README.md  pyproject.toml
.github/workflows/: poetry-publish.yml
dataset/simple/: zheng.shpdf
scripts/: format.py  test.py
src/: __init__.py  convert.py  decode.py  decode__test.py  encode.py  encode__test.py  error.py  example__test.py  format.py  reader.py
